# project_librarian

./: README.md
v0/: pyproject.toml
v0/common/: utils.py
v0/coordinator/: agent.py  executor.py
v0/deployments/: deploy_project_librarian.py
v0/env/: setEnv.sh
v0/tests/: local_test.py
v1/common/: const.py  firestore_tools.py
v1/coordinator/: agent.py  executor.py
v1/tests/: test_v1_creation.py  test_v1_task_creation.py
